# fast5check

./: README.md  pyproject.toml
fast5check/: fast5check.py
