[project]
name = "fast5check"
version = "0.1.0"
authors = [
    {name = "Michael Kaufman", email = "mlkaufman@gmail.com"},
]
description = "A CLI tool to check for truncations in fast5 files."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "h5py>=3.10.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["setuptools>=68.2.2"]
build-backend = "setuptools.build_meta"

[project.scripts]
htmltabs = "fast5check.fast5check:app"
